// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots layouts/with a background default 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <div
    class="
    layout-with-background
    p-grid
    p-jc-center
    p-ai-center
  "
    style="background-image: url(/img/bg-intro.jpg);"
  >
    <div
      class="p-col"
      style="max-width: 600px;"
    >
      <a
        class="mock-link p-d-block p-text-center"
      >
        <img
          alt="logo"
          class="p-mb-4 p-mx-auto"
          src="/img/logo-bg-primary.png"
        />
      </a>
       
      <div
        class="p-card p-component p-col"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <!---->
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
          This is the main content of the content card.
        
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="version-block p-p-2"
    >
      
    0.0.4
  
    </div>
  </div>
</div>
`;

exports[`storyshots layouts/with a background with all slots 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <div
    class="
    layout-with-background
    p-grid
    p-jc-center
    p-ai-center
  "
    style="background-image: url(/img/bg-intro.jpg);"
  >
    <div
      class="p-col"
      style="max-width: 600px;"
    >
      <a
        class="mock-link p-d-block p-text-center"
      >
        <img
          alt="logo"
          class="p-mb-4 p-mx-auto"
          src="/img/logo-bg-primary.png"
        />
      </a>
       
      <div
        class="p-card p-component p-col"
      >
        <div
          class="p-card-header"
        >
          
        This is a header
      
        </div>
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            
        This is a title
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
             
      This is the main part
      
          </div>
           
          <div
            class="p-card-footer"
          >
            
        This is a footer
      
          </div>
        </div>
      </div>
    </div>
     
    <div
      class="version-block p-p-2"
    >
      
    0.0.4
  
    </div>
  </div>
</div>
`;

exports[`storyshots layouts/with a background with slot title 1`] = `
<div
  class="p-fluid"
  style="height: 100%;"
>
  <div
    class="
    layout-with-background
    p-grid
    p-jc-center
    p-ai-center
  "
    style="background-image: url(/img/bg-intro.jpg);"
  >
    <div
      class="p-col"
      style="max-width: 600px;"
    >
      <a
        class="mock-link p-d-block p-text-center"
      >
        <img
          alt="logo"
          class="p-mb-4 p-mx-auto"
          src="/img/logo-bg-primary.png"
        />
      </a>
       
      <div
        class="p-card p-component p-col"
      >
        <!---->
         
        <div
          class="p-card-body"
        >
          <div
            class="p-card-title"
          >
            
        This is a title
      
          </div>
           
          <!---->
           
          <div
            class="p-card-content"
          >
            
          This is the main content of the content card.
        
          </div>
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="version-block p-p-2"
    >
      
    0.0.4
  
    </div>
  </div>
</div>
`;
